# StreamLine_cpp

./: .clang-format  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt
code/: CMakeLists.txt  main.cpp
code/include/: streamline.h
code/src/: streamline.cpp
